tests/paczka2/big_fuzzy/24935451.err
Error in line 4: A608 A 9,2
Error in line 21: c4OvD7SUrq A33 42,48
Error in line 23: dIYxu A33 90,n
Error in line 16: Fh2oEkJnMY A608 35,1
Error in line 18: 8PT9 A33 32,9
Error in line 15: 5svTN6GuOx4 A608 64,5
Error in line 28: dIYxu A33 66,3
Error in line 30: 5svTN6GuOx4 S169 53,3
Error in line 29: 8PT9 A608 96,9
Error in line 48: A608 S783 61,2
Error in line 35: bmJcsUFm A608 14,0
Error in line 41: Fh2oEkJnMY S783 292,8
Error in line 60: bmJcsUFm S169 41,9
Error in line 63: c4OvD7SUrq A608 84,7
Error in line 68: c4OvD7SUrq A33 36,6
Error in line 57: 8PT9 A33 31,1
Error in line 85: A608 S783 13,8
Error in line 94: 5svTN6GuOx4 A608 18,7
Error in line 93: 8PT9 S169 95,3
Error in line 99: Fh2oEkJnMY S169 15,1
Error in line 101: Fh2oEkJnMY S783 72,5
Error in line 107: Fh2oEkJnMY A33 4,7
Error in line 142: 8PT9 S169 5,5
Error in line 147: bmJcsUFm S169 50,7
Error in line 149: 5svTN6GuOx4 A608 65,3
Error in line 160: 5svTN6GuOx4 S169 10,3
Error in line 158: Fh2oEkJnMY S169 90,9
Error in line 164: Fh2oEkJnMY A33 94,0
Error in line 130: c4OvD7SUrq A608 24,4
Error in line 180: 5svTN6GuOx4 A33 95,80
Error in line 185: bmJcsUFm S783 45,8
Error in line 187: Fh2oEkJnMY A608 90,0
Error in line 202: Fh2oEkJnMY S169 48,0
Error in line 195: 5svTN6GuOx4 A33 50,5
Error in line 207: bmJcsUFm A33 54,2
Error in line 213: Fh2oEkJnMY S783 58,0
Error in line 215: Fh2oEkJnMY A33 59,4
Error in line 208: 5svTN6GuOx4 S783 57,6
Error in line 216: Fh2oEkJnMY S169 4,5
Error in line 221: Fh2oEkJnMY S783 49,3
Error in line 218: c4OvD7SUrq S169 73,1
Error in line 223: c4OvD7SUrq S783 87,4
Error in line 238: bmJcsUFm A33 57,7
Error in line 244: dIYxu S169 78,1
Error in line 243: Fh2oEkJnMY S169 93,8
Error in line 227: A608 S169 57,3
